# SonarAudioSwitcher

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
.github/: copilot-instructions.md
installer/: installer.iss
resources/: app.manifest  app.psd  app.rc  resource.h
src/: config.cpp  config.h  device_matcher.cpp  device_matcher.h  diag.cpp  imgui_settings_window.cpp  imgui_settings_window.h  logger.cpp  logger.h  main.cpp  process_monitor.cpp  process_monitor.h  sonar_client.cpp  sonar_client.h  startup.cpp  startup.h  switcher.cpp  switcher.h
ui/: settings.slint
